[package]
name = "akgine"
version = "0.1.4"
edition = "2024"
description = "Global function"
license = "GPL-3.0-only"
repository = "https://github.com/Arflaka/akgine"

[lib]
name = "akgine"
crate-type = ["cdylib", "rlib"] # required for Android .so

[lints.rust]
unused_parens = "allow"

[dependencies]
akgine_macros = { path="./akgine_macros", version="0.1.1", optional=true }
# akgine_macros = { path = "./akgine_macros" }
egui_extras = { version = "0.34.1", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }

[features]
default = [] # Aucune feature n'est activée par défaut
derive = ["dep:akgine_macros"]

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

# eframe SANS les features desktop/accesskit quand on build Android
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "android-native-activity",
    "glow",
    "persistence",
] }
android-activity = { version = "0.6", features = ["native-activity"] }
